Beef up the Hapi interface

--- a/client/index.html
+++ b/client/index.html
@@ -1,23 +1,27 @@
 <body>
 
-    <h1>Hi!</h1>
+    <div class="wrap">
 
-    <p>Here's the api:</p>
-    <ul>
-        <li>Some path</li>
-        <li>Some path</li>
-        <li>Some path</li>
-        <li>Some path</li>
-        <li>Some path</li>
-    </ul>
+        <h1>Hi!</h1>
 
-    <section>
-        You'll need to be
-        <strong>Authenticated</strong>
-        with the Shopify API in order to do anything.
-    </section>
-    <section>
-        The HAPI Server is running port <code>8080</code>
-    </section>
+        <p>Here's the api:</p>
+        <ul>
+            <li>Some path</li>
+            <li>Some path</li>
+            <li>Some path</li>
+            <li>Some path</li>
+            <li>Some path</li>
+        </ul>
+
+        <section>
+            You'll need to be
+            <strong>Authenticated</strong>
+            with the Shopify API in order to do anything.
+        </section>
+        <section>
+            The HAPI Server is running port <code>8080</code>
+        </section>
+
+    </div>
 
 </body>
